--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,6 @@
 <img src="./1000001372.jpg" alt ="Theodosia sitting on a cardboard box" />
 <img src="./1000001407.jpg" alt ="Theodosia laying down on a bed" />
 		<br />
-		<a href="./homepage.html">Return to home</a>
+		<a href="./index.html">Return to home</a>
 	</body>
 </html>
