--- a/her_mission.html
+++ b/her_mission.html
@@ -16,6 +16,6 @@
 		instincts. </p>
 		<img src="./1000001335.jpg" alt="Theodosia surveilling the wildlife through a window"/>
 		<br />
-		<a href="./homepage.html">Return to home</a>
+		<a href="./index.html">Return to home</a>
 	</body>
 </html>
