--- a/personal_life.html
+++ b/personal_life.html
@@ -10,6 +10,6 @@
 		difficult situation that they immediately hired her to teach them the proper social skills so many humans tragically never learn. It is difficult work, but she has made lifelong friends through the experience, and 
 		learned useful skills. However, the limited treats and trips outside have inspired her to begin broadening her horizons and seek a position that actually gives her adequate payment. </p>
 		<br />
-		<a href="./homepage.html">Return to home</a>
+		<a href="./index.html">Return to home</a>
 	</body>
 </html>
