--- a/qualifications.html
+++ b/qualifications.html
@@ -34,6 +34,6 @@ exampleFunction=eat(exampleFunction, varA, varB);
 //most problems can be solved by eating them
 			</code>
 		</pre>
-		<a href="./homepage.html">Return to home</a>
+		<a href="./index.html">Return to home</a>
 	</body>
 </html>
